--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -22,8 +22,8 @@
         android:id="@+id/action_userprofile"
         android:icon="@drawable/user"
         android:title="Profile"
-        app:showAsAction = "always"
-        android:orderInCategory="90">
+        app:showAsAction = "ifRoom"
+        android:orderInCategory="110">
 
     </item>
 
